<resources>
    <string name="app_name">CatLauncher</string>
    <string name="app_header_photo_name">Photo</string>
    <string name="app_header_video_name">Live</string>
    <string name="app_header_app_name">App</string>
    <string name="app_header_function_name">Function</string>

    <string name="onboarding_title_welcome">Welcome to the Leanback Sample</string>
    <string name="onboarding_title_design">Designed for Android TV</string>
    <string name="onboarding_title_simple">Simple to include</string>
    <string name="onboarding_title_project">Check out the Sample Project</string>

    <string name="onboarding_description_welcome">This is the Onboarding Fragment, which runs when the user first opens the app</string>
    <string name="onboarding_description_design">The Leanback sample shows how to quickly design apps designed for a 10-foot user interface</string>
    <string name="onboarding_description_simple">You can include the Leanback library through gradle in your own apps</string>
    <string name="onboarding_description_project">Are you looking for guidance? This sample is available on GitHub so you can see how we built this.</string>

    <string name="pref_title_settings">App Settings</string>
    <string name="pref_title_recommendations">Recommendations</string>
    <string name="pref_key_recommendations">pref_recommendations</string>
    <string name="pref_key_screen_general">general_settings</string>
    <string name="pref_title_screen_general">General Settings</string>
    <string name="pref_key_screen_signin">signin</string>
    <string name="pref_title_screen_signin">Please Login</string>
    <string name="pref_title_login_description">Please enter your username and password</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_key_login">pref_login</string>
    <string name="pref_title_login">Login</string>
    <string name="guidedstep_continue">Continue</string>
    <string name="header_icon">Header icon</string>
</resources>
